--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,10 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="searching">Searching...</string>
+    <string name="search">Search</string>
+    <string name="client">Client</string>
+    <string name="server">Server</string>
+    <string name="record">RECORD</string>
+    <string name="recording">RECORDING</string>
 </resources>
