--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="prefs_name_title">Name</string>
+    <string name="prefs_name_key">prefs_name</string>
+    <string name="settings">Settings</string>
 </resources>
